syntax = "proto3";

package lerp;

import "common.proto";

message HttpGetGameServerInput {}

message HttpGetGameServerResponse {
    int32 udp_port = 1;
    string aes_key = 2;
    string aes_nonce = 3;
}
